--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start:prod": "node dist/main.js",
     "build": "tsc",
     "prettier:format": "prettier --write src/**/*.ts",
-    "prettier:check": "prettier --check src/**/*.ts"
+    "prettier:check": "prettier --check src/**/*.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@trpc/server": "^10.45.2",
@@ -27,6 +28,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.6",
     "@types/pdf-parse": "^1.1.4",
+    "husky": "^9.1.7",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
